# assessment-grading-engine

./: .env.sample  .gitignore  README.md  pyproject.toml
assessments/: models.py  serializers.py  services.py  tests.py  views.py
assessments/management/commands/: generate_sample_data.py  seed_students.py
helpers/: llm_backends.py
main/: settings.py  urls.py
