[project]
name = "assessment-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "google-genai>=1.56.0",
    "openai>=2.14.0",
    "psycopg>=3.3.2",
    "redis>=7.1.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
]
